--- a/employee_payroll_attendance/views/custom_report_layout.xml
+++ b/employee_payroll_attendance/views/custom_report_layout.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Kế thừa layout Striped -->
+    <!-- Inherit Striped layout -->
     <template id="custom_report_invoice_template" inherit_id="web.external_layout_striped">
-        <!-- Đảm bảo logo hiển thị đúng kích thước -->
+        <!-- Ensure logo displays correctly -->
         <xpath expr="//img[@class='float-start']" position="attributes">
             <attribute name="style">width: 270px !important; max-height: none !important; max-width: none !important; height: 120px !important; margin-right: 60px !important;margin-bottom: 13px !important;margin-top: 5px !important;</attribute>
         </xpath>
 
-        <!-- Đặt chiều cao của company_address tương tự logo -->
+        <!-- Set company_address height to match logo -->
         <xpath expr="//div[@class='float-start company_address']" position="attributes">
             <attribute name="style"> display: flex; flex-direction: column; justify-content: center; height: 100%;margin-bottom: 0px !important;margin-top: 15px !important; </attribute>
         </xpath>
 
-        <!-- Giảm margin và padding của thẻ <p> -->
+        <!-- Reduce margin and padding of <p> tags -->
         <xpath expr="//div[@class='float-start company_address']//ul[@class='list-unstyled']" position="inside">
             <style>
                 .float-start.company_address p {
@@ -22,15 +22,15 @@
             </style>
         </xpath>
 
-        <!-- Giảm chiều cao của header -->
+        <!-- Reduce header height -->
         <xpath expr="//div[contains(@class, 'clearfix mb8')]" position="attributes">
             <attribute name="style">
                 height: 138px !important;
-                position: relative; /* Đổi từ fixed sang relative */
+                position: relative; /* Change from fixed to relative */
             </attribute>
         </xpath>
 
-        <!-- Thay đổi màu của các đường link trong header -->
+        <!-- Change link color in header -->
         <xpath expr="//div[contains(@class, 'clearfix mb8')]" position="inside">
             <style>
                 @media print {
@@ -49,15 +49,15 @@
         </xpath>
     </template>
 
-    <!-- Kế thừa Invoice Body -->
+    <!-- Inherit Invoice Body -->
     <template id="custom_account_report_invoice_body" inherit_id="account.report_invoice_document">
-        <!-- Thêm Bill to section -->
+        <!-- Add Bill to section -->
         <xpath expr="//div[@class='row']" position="replace">
             <div class="row" style="margin-top: 25px;margin-bottom: 25px;">
-                <!-- Khu vực bên trái -->
+                <!-- Left side -->
                 <div class="col-7"></div>
 
-                <!-- Khu vực bên phải -->
+                <!-- Right side -->
                 <div class="col-5 text-start" name="bill_to_section" style=" margin-left: 0px;">
                     <address class="mb-0" style="margin-left: 10px;">
                         <strong>Bill to:</strong>
@@ -77,9 +77,10 @@
             <attribute name="style">margin-top: 1rem !important;</attribute>
         </xpath>
 
-        <!-- Thay thế Untaxed Amount và Total -->
+        <!-- Replace Untaxed Amount and Total -->
         <xpath expr="//div[@id='total']//table[@class='table table-sm table-borderless']" position="replace">
             <table class="table table-sm table-borderless" style="page-break-inside: avoid;">
+
                 <!-- Subtotal -->
                 <tr>
                     <td class="text-start">
@@ -89,6 +90,7 @@
                         <span t-esc="o.amount_total" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                     </td>
                 </tr>
+
                 <!-- Discount -->
                 <tr>
                     <td class="text-start">
@@ -98,33 +100,7 @@
                         <span t-esc="o.discount or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                     </td>
                 </tr>
-                <!-- Subtotal Less Discount -->
-                <tr>
-                    <td class="text-start">
-                        <strong>Subtotal Less Discount:</strong>
-                    </td>
-                    <td class="text-end">
-                        <span t-esc="o.amount_total - (o.discount or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                    </td>
-                </tr>
-                <!-- Tax Rate -->
-                <tr>
-                    <td class="text-start">
-                        <strong>Tax Rate 15%:</strong>
-                    </td>
-                    <td class="text-end">
-                        <span t-esc="o.tax_rate or 'N/A'"/>
-                    </td>
-                </tr>
-                <!-- Total Tax -->
-                <tr>
-                    <td class="text-start">
-                        <strong>Total Tax:</strong>
-                    </td>
-                    <td class="text-end">
-                        <span t-esc="o.amount_tax" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                    </td>
-                </tr>
+
                 <!-- Bank Fee -->
                 <tr>
                     <td class="text-start">
@@ -134,6 +110,37 @@
                         <span t-esc="o.bank_fee or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                     </td>
                 </tr>
+
+                <!-- Subtotal Less Discount -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Subtotal Less Discount:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.amount_total - (o.discount or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
+
+                <!-- Tax Rate -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Tax Rate 15%:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.tax_rate or 'N/A'"/>
+                    </td>
+                </tr>
+
+                <!-- Total Tax -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Total Tax:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.amount_tax" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
+
                 <!-- Balance Due -->
                 <tr>
                     <td class="text-start">
@@ -152,19 +159,14 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
-            <!-- Thêm Discount và Bank Fee -->
-            <xpath expr="//label[@class='o_form_label o_tax_total_label']" position="before">
-                <div>
-                    <label for="discount" string="Discount"/>
-                    <field name="discount" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                </div>
-                <div>
-                    <label for="bank_fee" string="Bank Fee"/>
-                    <field name="bank_fee" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                </div>
+            <!-- Insert Discount and Bank Fee before Untaxed Amount -->
+            <xpath expr="//group[@class='oe_subtotal_footer oe_right']" position="before">
+                <group class="oe_subtotal_footer oe_right">
+                    <field name="discount" options="{'currency_field': 'currency_id'}"/>
+                    <field name="bank_fee" options="{'currency_field': 'currency_id'}"/>
+                </group>
             </xpath>
         </field>
     </record>
-
-
 </odoo>
+
