--- a/employee_payroll_attendance/views/custom_report_layout.xml
+++ b/employee_payroll_attendance/views/custom_report_layout.xml
@@ -87,7 +87,7 @@
                         <strong>Subtotal:</strong>
                     </td>
                     <td class="text-end">
-                        <span t-esc="o.amount_total" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                        <span t-esc="o.subtotal" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                     </td>
                 </tr>
 
@@ -100,24 +100,13 @@
                         <span t-esc="o.discount or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                     </td>
                 </tr>
-
-                <!-- Bank Fee -->
-                <tr>
-                    <td class="text-start">
-                        <strong>Bank Fee:</strong>
-                    </td>
-                    <td class="text-end">
-                        <span t-esc="o.bank_fee or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
-                    </td>
-                </tr>
-
                 <!-- Subtotal Less Discount -->
                 <tr>
                     <td class="text-start">
                         <strong>Subtotal Less Discount:</strong>
                     </td>
                     <td class="text-end">
-                        <span t-esc="o.amount_total - (o.discount or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                        <span t-esc="o.subtotal - (o.discount or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                     </td>
                 </tr>
 
@@ -140,6 +129,16 @@
                         <span t-esc="o.amount_tax" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                     </td>
                 </tr>
+                
+                <!-- Bank Fee -->
+                <tr>
+                    <td class="text-start">
+                        <strong>Bank Fee:</strong>
+                    </td>
+                    <td class="text-end">
+                        <span t-esc="o.bank_fee or 0.0" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                    </td>
+                </tr>
 
                 <!-- Balance Due -->
                 <tr>
@@ -147,7 +146,7 @@
                         <strong>Balance Due:</strong>
                     </td>
                     <td class="text-end">
-                        <span t-esc="o.amount_total - (o.discount or 0.0) + o.amount_tax + (o.bank_fee or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+                        <span t-esc="o.subtotal - (o.discount or 0.0) + o.amount_tax + (o.bank_fee or 0.0)" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
                     </td>
                 </tr>
             </table>
