--- a/extra-addons/employee_payroll_attendance/views/hr_payslip_views_update.xml
+++ b/extra-addons/employee_payroll_attendance/views/hr_payslip_views_update.xml
@@ -42,4 +42,18 @@
         </field>
     </record>
 
+    <!-- <record id="view_attendance_form" model="ir.ui.view">
+        <field name="name">hr.attendance.form</field>
+        <field name="model">hr.attendance</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="check_in" widget="datetime" options="{'format': 'HH:mm'}"/>
+                        <field name="check_out" widget="datetime" options="{'format': 'HH:mm'}"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record> -->
 </odoo>
