--- a/extra-addons/employee_payroll_attendance/views/hr_payslip_views_update.xml
+++ b/extra-addons/employee_payroll_attendance/views/hr_payslip_views_update.xml
@@ -1,4 +1,3 @@
-
 <odoo>
     <record id="view_hr_payslip_form_inherit_attendance" model="ir.ui.view">
         <field name="name">hr.payslip.form.inherit.attendance</field>
@@ -13,26 +12,20 @@
                         <field name="worked_hours"/>
                         <field name="approved"/>
                         <!-- Button Approve -->
-                    <!-- Button Approve -->
-                    <button name="toggle_approval" type="object" string="Approve"
-                            attrs="{'invisible': [('approved', '=', True)]}"
-                            class="btn-primary oe_inline"/>
-                    
-                    <!-- Button Unapprove -->
-                    <button name="toggle_approval" type="object" string="Unapprove"
-                            attrs="{'invisible': [('approved', '=', False)]}"
-                            class="btn-danger oe_inline"/>
-                    
-                    <!-- Button View Details -->
-                    <button name="action_view_details" type="object" string="View Details"
-                            attrs="{'readonly': [('approved', '=', True)]}"
-                            class="btn-secondary oe_inline"/>                  
+                        <!-- Button Approve -->
+                        <button name="toggle_approval" type="object" string="Approve" attrs="{'invisible': [('approved', '=', True)]}" class="btn-primary oe_inline"/>
+
+                        <!-- Button Unapprove -->
+                        <button name="toggle_approval" type="object" string="Unapprove" attrs="{'invisible': [('approved', '=', False)]}" class="btn-danger oe_inline"/>
+
+                        <!-- Button View Details -->
+                        <button name="action_view_details" type="object" string="View Details" attrs="{'readonly': [('approved', '=', True)]}" class="btn-secondary oe_inline"/>
                     </tree>
                 </field>
             </xpath>
         </field>
     </record>
-    
+
     <record id="action_duplicate_payslip" model="ir.actions.server">
         <field name="name">Create payslip for next month</field>
         <field name="model_id" ref="employee_payroll_attendance.model_hr_payslip"/>
@@ -45,4 +38,7 @@
         </field>
     </record>
 
+    <record id="action_quotations" model="ir.actions.act_window">
+        <field name="domain">[]</field>        <!-- Loại bỏ domain để tắt bộ lọc "My Quotations" -->
+    </record>
 </odoo>
