--- a/extra-addons/employee_payroll_attendance/views/hr_payslip_views_update.xml
+++ b/extra-addons/employee_payroll_attendance/views/hr_payslip_views_update.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='attendance_ids']" position="replace">
                 <field name="attendance_line_ids" readonly="1">
-                    <tree string="Attendance Records" decoration-muted="approved" limit="60" default_order="check_in desc">
+                    <tree string="Attendance Records" decoration-muted="approved">
                         <field name="check_in"/>
                         <field name="check_out"/>
                         <field name="worked_hours"/>
@@ -26,7 +26,6 @@
         </field>
     </record>
 
-
     <record id="action_duplicate_payslip" model="ir.actions.server">
         <field name="name">Create payslip for next month</field>
         <field name="model_id" ref="employee_payroll_attendance.model_hr_payslip"/>
@@ -39,7 +38,4 @@
         </field>
     </record>
 
-    <record id="action_quotations" model="ir.actions.act_window">
-        <field name="domain">[]</field>        <!-- Loại bỏ domain để tắt bộ lọc "My Quotations" -->
-    </record>
 </odoo>
