--- a/employee_payroll_attendance/views/hr_payslip_views.xml
+++ b/employee_payroll_attendance/views/hr_payslip_views.xml
@@ -76,6 +76,11 @@
                         <field name="meal_allowance"/>
                         <field name="kpi_bonus"/>
                         <field name="other_bonus"/>
+
+                        <field name="insurance_vnd"/>
+                        <field name="meal_allowance_vnd"/>
+                        <field name="kpi_bonus_vnd"/>
+                        <field name="other_bonus_vnd"/>
                     </group>
                     <group string="Summary">
                         <field name="total_working_days" readonly="1"/>
