--- a/employee_payroll_attendance/views/custom_report_layout.xml
+++ b/employee_payroll_attendance/views/custom_report_layout.xml
@@ -212,6 +212,7 @@
         </xpath>
     </template>
 
+    <!-- Custom Amount Residual -->
     <record id="view_invoice_form_inherit" model="ir.ui.view">
         <field name="name">account.move.form.inherit</field>
         <field name="model">account.move</field>
@@ -224,10 +225,23 @@
                     <field name="subtotal_less_discount" readonly="1" options="{'currency_field': 'currency_id'}"/>
                 </group>
             </xpath>
-            <xpath expr="//group[@class='oe_subtotal_footer oe_right']" position="after">
-                <group class="oe_subtotal_footer oe_right" style="width: 100%;" >
+
+            <xpath expr="//field[@name='amount_residual']" position="replace">
+                <group class="oe_subtotal_footer oe_right" style="width: 100%;">
                     <field name="custom_amount_residual" class="oe_subtotal_footer_separator" readonly="1" options="{'currency_field': 'currency_id'}"/>
                 </group>
+            </xpath>
+        </field>
+    </record>
+    <!-- Custom  Total in Currency Field -->
+    <record id="view_account_move_tree_inherit" model="ir.ui.view">
+        <field name="name">account.move.tree.inherit</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_out_invoice_tree" />
+        <field name="arch" type="xml">
+            <!-- Replace field amount_total_in_currency_signed with custom_amount_residual -->
+            <xpath expr="//field[@name='amount_total_in_currency_signed']" position="replace">
+                <field name="custom_amount_residual" string="Total in Currency" />
             </xpath>
         </field>
     </record>
